# oh-my-hermes-agent

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  INSTALL_FOR_AGENTS.md  README.md  install.sh  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
.github/scripts/: friren_pr_review.py
.github/workflows/: ci.yml  friren-pr-review.yml  pages.yml
.hermes/plans/: 2026-06-05-hermes-native-wrapper-orchestration.md
docs/: APPLICATION_CASES.md  ARCHITECTURE.md  CHAT_WRAPPER_EXAMPLES.md  DELEGATION_FIRST_COMPLETENESS.md  DIRECTION.md  HARNESS_QUALITY.md  HERMES_AGENT_INTEGRATION_RUNBOOK.md  INSTALLATION.md  MEMORY_CONTEXT.md  PARITY.md  PLAYBOOKS.md  README.md  RELEASE.md  ROADMAP.md  ROLES.md  SKILL_QUALITY_COMPARISON.md  WORKFLOWS.md
examples/: discord-adapter-shim.py  discord-bot-runtime-flow.md  slack-adapter-shim.py  wrapper_shim_common.py
examples/wrapper-events/: discord-safe-feature.json  slack-risky-refactor.json
examples/wrapper-golden/: harness-quality.json  hermes-agent-integration.json  status-ladder.json
roles/: coding-handoff.md
site/: index.html  styles.css
site/docs/: index.html
skills/ai-slop-cleaner/: SKILL.md
skills/ask/: SKILL.md
skills/autoresearch-goal/: SKILL.md
skills/best-practice-research/: SKILL.md
skills/cancel/: SKILL.md
skills/code-review/: SKILL.md
skills/cto-loop/: SKILL.md
skills/deep-interview/: SKILL.md
skills/deploy-and-monitor/: SKILL.md
skills/doctor/: SKILL.md
skills/feedback-triage/: SKILL.md
skills/idea-to-deploy/: SKILL.md
skills/loop/: SKILL.md
skills/meeting-brief/: SKILL.md
skills/oh-my-hermes/: SKILL.md
skills/operating-rhythm/: SKILL.md
skills/ops-review/: SKILL.md
skills/performance-goal/: SKILL.md
skills/plan/: SKILL.md
skills/ralph/: SKILL.md
src/: __init__.py  chat_router.py  cli.py  coding_contracts.py  coding_delegation.py  coding_lifecycle.py  config_adapter.py  converter.py  demo.py  doctor.py  executors.py  goal_loop.py  grounded_score.py  harness_quality.py  hermes_planning.py  hud.py  ingress.py  installer.py  local_store.py  manifest.py  memory.py  parity.py  paths.py  playbooks.py  plugin_pack.py  probe.py  recommend.py  release.py  runtime_artifacts.py  runtime_records.py  setup_profiles.py  skill_pack.py  snippet.py  targets.py  team_profiles.py  workflow_state.py  wrapper_contract.py  wrapper_sessions.py
tests/: _cli_harness.py  test_application_cases.py  test_architecture_layout.py  test_chat_router.py  test_cli.py  test_coding_lifecycle.py  test_efficiency.py  test_friren_pr_review.py  test_hud.py  test_loop_cycle.py  test_memory.py  test_packaging_metadata.py  test_plugin_distribution.py  test_probe.py  test_release_smoke.py  test_router_content.py  test_runtime_artifacts.py  test_runtime_lifecycle_invariants.py  test_targets.py  test_workflow_state.py  test_wrapper_contract.py  test_wrapper_golden_examples.py  test_wrapper_sessions.py
(+67 files in other folders)
