[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oh-my-hermes-agent"
version = "0.1.0"
description = "Install a Hermes-native skill workflow pack."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "oh-my-hermes maintainers" }]
dependencies = []
keywords = ["hermes", "agent", "skills", "workflow", "automation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development",
]

[project.scripts]
omh = "omh.cli:main"

[project.urls]
Homepage = "https://github.com/rlaope/oh-my-hermes-agent"
Issues = "https://github.com/rlaope/oh-my-hermes-agent/issues"
Repository = "https://github.com/rlaope/oh-my-hermes-agent"

[tool.setuptools]
packages = [
  "omh",
  "omh.commands",
  "omh.core",
  "omh.routing",
  "omh.runtime",
  "omh.skills",
  "omh.wrapper",
]

[tool.setuptools.package-dir]
omh = "src"
"omh.commands" = "src/commands"
"omh.core" = "src/core"
"omh.routing" = "src/routing"
"omh.runtime" = "src/runtime"
"omh.skills" = "src/skills"
"omh.wrapper" = "src/wrapper"
