[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "oh-my-hermes"
version = "1.0.0"
description = "Install a Hermes-native skill workflow pack."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "oh-my-hermes maintainers" }]
dependencies = []
keywords = ["hermes", "agent", "skills", "workflow", "automation"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development",
]

[project.scripts]
omh = "omh.cli:main"

[project.urls]
Homepage = "https://rlaope.github.io/oh-my-hermes/"
Issues = "https://github.com/rlaope/oh-my-hermes/issues"
Repository = "https://github.com/rlaope/oh-my-hermes"

[tool.setuptools]
packages = [
  "omh",
  "omh.catalogs",
  "omh.commands",
  "omh.core",
  "omh.plugin_bundle",
  "omh.plugin_bundle.omh",
  "omh.plugin_bundle.omh.hooks",
  "omh.plugin_bundle.omh.tools",
  "omh.profiles",
  "omh.routing",
  "omh.runtime",
  "omh.skills",
  "omh.wrapper",
]

[tool.setuptools.package-dir]
omh = "src"
"omh.catalogs" = "src/catalogs"
"omh.commands" = "src/commands"
"omh.core" = "src/core"
"omh.profiles" = "src/profiles"
"omh.routing" = "src/routing"
"omh.runtime" = "src/runtime"
"omh.skills" = "src/skills"
"omh.wrapper" = "src/wrapper"

[tool.setuptools.package-data]
"omh.plugin_bundle.omh" = ["plugin.yaml", "config.yaml"]
